<resources>
    <string name="app_name">GameConnect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_passed">LoginPassed</string>
    <string name="onboard_passed">OnBoardingPassed</string>
    <string name="game_connect">Game\nConnect</string>
    <string name="wellcome">Добро пожаловать в \nGameConnect!Наслаждайтесь\nкомандной игрой!</string>
    <string name="authorise">Авторизоваться</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="authorisation">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forget_password">Я забыл пароль</string>
    <string name="repeat_password">Повторить пароль</string>
    <string name="registration">Регистрация</string>
    <string name="enter_correct_email">Введите корректный email</string>
    <string name="enter_email">Введите email</string>
    <string name="do_you_want_to_reset_password_for">Хотите сменить пароль для</string>
    <string name="your_email_must_be_correct">Ваш email должен быть корретным</string>
    <string name="some_problems_went">Технические шоколадки</string>
    <string name="failed_to_authorize">Не получилось авторизоваться</string>
    <string name="you_have_been_successfully_authorised">Успешно</string>
    <string name="enter_the_password">Введите пароль</string>
    <string name="user_key">user_key</string>
    <string name="user_name">user_name</string>
    <string name="isAdditionalInfoEntered">isAdditionalInfoEntered</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="password_must_be_6_symbols_at_least">Пароль должен содержать не менее 6 символов</string>
    <string name="account_data">Данные аккаунта</string>
    <string name="nickname">Никнейм</string>
    <string name="man">Мужчина</string>
    <string name="telegram_id">Телеграм id (@...)</string>
    <string name="your_platforms">Ваши платформы:</string>
    <string name="continue_text">Продолжить</string>
    <string name="short_nick">Никнейм содержит меньше 6 символов</string>
    <string name="no_telegram_id">Заполните поле telegram id</string>
    <string name="women">Девушка</string>
    <string name="empty_list_platforms">Список платформ не может быть пуст</string>
    <string name="search">Поиск</string>
    <string name="teammates">Тиммейты</string>
    <string name="profile">Профиль</string>
    <string name="request_list">Список запросов</string>
    <string name="your_timmates">Список заявок</string>
    <string name="need_users">Требуется людей: </string>
    <string name="gender">Пол: </string>
    <string name="comment">Комментарий: </string>
    <string name="create_request">Создать запрос</string>
    <string name="game_name">Название игры</string>
    <string name="count_of_users">Кол-во тиммейтов</string>
    <string name="comment_string">Коммент (опционально)</string>
    <string name="ok">OK</string>
    <string name="comment_is_too_short">Комментарий слишком короткий</string>
    <string name="game_name_too_short">Название игры слишком короткое</string>
    <string name="need_users_at_least_1_teammate">Количество тиммейтов не может быть 0</string>
    <string name="to_many_teammates">Слишком много искомых тиммейтов</string>
    <string name="sorted_by">Сортировка:</string>
    <string name="filters">Фильтры</string>
    <string name="new_at_start">Сначала Новые</string>
    <string name="old_at_start">Сначала Старые</string>
    <string name="alphabet_sort">A-Z</string>
    <string name="alphabet_distinct_sort">Z-A</string>
    <string name="males_first">Сначала Сарни</string>
    <string name="females_first">Сначала Девушки</string>
    <string name="raiting_sort">По рейтингу</string>
    <string name="pc">PC(ПК)</string>
    <string name="playstation">PlayStation</string>
    <string name="xbox">XBOX</string>
    <string name="mobile">Mobile</string>
    <string name="nintendoswitch">NintendoSwitch</string>
    <string name="deleteFilters">Без фильтров</string>
    <string name="delete">Удалить</string>
    <string name="lets_join">Вас ждут!</string>
    <string name="open_profile">Открыть профиль</string>
    <string name="listlistteammates">listListTeammates</string>
    <string name="poradok">Порядочность:</string>
    <string name="games">Игры:</string>
    <string name="increase_rating">Порядочность пользователя повышена</string>
    <string name="decrease_rating">Порядочность пользователя понижена</string>
    <string name="userpick">userPick</string>
    <string name="make_app_use_camera">Разрешите приложению использовать камеру</string>
    <string name="make_app_use_gallery">Разрешите приложению использовать галлерею</string>
    <string name="accept">Принять</string>
    <string name="rejectBtn">Отклонить</string>
    <string name="new_request">Нерешённый запрос!</string>
    <string name="waitinglist">WaitingList</string>
</resources>