<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_shape"
    android:padding="24dp">

    <EditText
        android:id="@+id/gameNameTxt"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_form"
        android:hint="@string/game_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/needUsersTitle"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="4dp"
        android:text="@string/count_of_users"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

    <LinearLayout
        android:id="@+id/countLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/needUsersTitle">

        <ImageView
            android:id="@+id/imgReduce"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="@+id/countTxtView"
            app:layout_constraintEnd_toStartOf="@+id/countTxtView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/countTxtView"
            app:tint="@color/red" />

        <TextView
            android:id="@+id/needUsersTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imgIncrease"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:rotation="180"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/countTxtView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countTxtView"
            app:layout_constraintTop_toTopOf="@+id/countTxtView"
            app:tint="@color/green" />

    </LinearLayout>

    <EditText
        android:id="@+id/comment"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_border_form"
        android:hint="@string/comment_string"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameNameTxt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlatformsDialog"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPlatformsDialog" />
</androidx.constraintlayout.widget.ConstraintLayout>